--- a/JniOpenGL/app/src/main/res/layout/activity_main.xml
+++ b/JniOpenGL/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+    <fragment android:name="com.jeffcreswell.jniopengl.ui.JniStringItemFragment"
+        android:id="@+id/my_jnistrings_fragment"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
