--- a/JniOpenGL/app/src/main/res/layout/activity_main.xml
+++ b/JniOpenGL/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,18 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/my_gl_surfaceview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.jeffcreswell.jniopengl.ui.GlView
+        android:id="@+id/my_gl_surfaceview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_jnistrings_fragment" />
 
 </android.support.constraint.ConstraintLayout>
