added button to add random strings to RecyclerView, changed random string gen such that word count in a phrase is now randomly 1 to 3

--- a/JniOpenGL/app/src/main/res/layout/activity_main.xml
+++ b/JniOpenGL/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,16 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/add_strings_btn"
+        android:layout_alignParentTop="true"
+        />
+
+    <Button
+        android:id="@+id/add_strings_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/center_placeholder"
+        android:text="@string/add_string"
         />
 
     <FrameLayout
